# gst-rec-app

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  dev.py  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: release.yml
app/: __init__.py  models.py  routes.py  utils.py  wsgi.py
app/models/: __init__.py  settings.py
app/services/: __init__.py  filesystem.py  recording.py  recordings.py
app/static/css/: main.css
app/static/js/: filebrowser.js  main.js
app/templates/: base.html  index.html
gst_rec_app/: __init__.py  cli.py  gunicorn_conf.py  routes.py  utils.py  wsgi.py
gst_rec_app/models/: responses.py
gst_rec_app/services/: recording.py  recordings.py
gst_rec_app/static/js/: main.js  theme.js
gst_rec_app/templates/: index.html
